mobile/www/css/index.css
/* ... */
  .nonMdButton:hover, .nonMdButton:focus {
    text-decoration: none; }
  .nonMdButton.ng-hide, .nonMdButton.ng-leave {
    transition: none; }



.cameraButton {
    margin: 0;
    text-align: left;
    padding-left: 0;
}

.neutral {
    color:rgba(0, 0, 0, 0.541176);
}

.fullSection {
    margin-bottom: 25px;
}

.lMarg {
    margin-left: 15px;
    
}

.page {
    height:100%;
/*    background-color: white;*/
}

.footerSpace {
/*    height: 55px;*/
    margin-bottom: 64px;
}

.subSideAction {
   position: fixed;
    left: 0;
}

.pushContentRight {
    display: block;
    width: 304px;
    height: 1000px;
    float: left;


}

.overFlow {
    overflow-x:hidden;
}

.circleBack {
       background-color: #EEE;
}

.listItem {
    display:block;
    position: relative;
    padding: 10px;
}

.listHead {
    display:inline;
    vertical-align:middle
}

.marginAction {
    margin: 0px 5px 20px 5px;

}

.firstPosition {
    margin:0;
    padding:10px;
}

.checkList {
    margin: 0;
/*    padding: 10px 10px 10px 10px;*/
}

.relFlex {
    position: relative;
    display:flex;
}


.mainList {
    color: #333;
}

a {
    color: #333;
}

a:hover {
    color: #555;
}



.view-window {
    margin: 64px 0 0 0;
}

.marginRight {
    margin-right: 15px;
}

.subNavLeft {
    display: block;
    position: fixed;
    top:64px;
    z-index: 60;
}

.mainHeaderBar {
    position:fixed;
    top:0;
    z-index:61;
    width:100%
}

md-radio-group {
    border: none;
}


.profileWrapper {
    border-radius: 30px;
    background-color: #FFFFFF;
    height: 45px;
    width: 45px;
}

.md-open-menu-container {
    overflow: hidden;
}

.checkboxery {
    margin: 0;

}

.lock_size {
    height: 300px;
    width: 101px;
    position: relative;
    right: 40px;
}

.padMe {
  padding:0px 0 2px 0;   
}

.list_item {
    min-height: 48px;
    padding: 0 0 0 8px;
    vertical-align: middle;
}

.UpPicture {
    height: 200px;
    width:269px;
    max-width: 269px;
    background-size:cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
    margin: 0 10px 10px 10px;

}

.sideListItem {
    position:relative;
    margin-left: 20px;
}

.centerContent {
    max-width: 695px;
}

.mainButtonMenu {
    position:fixed;
    bottom:0;
    right:10px;

}

.buttonBox {
    display: block;
/*    position:relative; */
/*
    width: 200px;
    height: 300px;
*/
}
overoverflow-x:
        ::
        \:
         conscscroll;



#createSideNav {
    position: absolute;
}

.pictureBox {
    text-align: center;
    background-color: black;
    color: white;
    opacity: .3;
    width: 269px;
    height: 35px;
    position: absolute;
    bottom: 0;

}

.imageTitle {
    color:white;
    text-align:center;
    display: inline-block;
    vertical-align:middle;
    line-height: normal;
}

.centerTextVertical {
    height:35px;
    width:269px;
    line-height: 35px;
    text-align: center;
    position:absolute;
    bottom:0;
}

.cancelIMG {
    margin: 0 10px;

}

.radioHeight {
    padding: 10px 0;
    margin: 5px 0 5px 15px;


}

.plusMenu {
    background-color: white;
    position: fixed;
    bottom:0px;
    z-index: 9999;

}

.createHeader {
    z-index: 99;
    position: fixed;
    top: 0px;
    height: 54px;
    width: 100%;
    display:block;
}

.createHeader a:hover {
    color: inherit;
}

.overHead {
  font-weight: 400;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-flex-direction: row;
      -ms-flex-direction: row;
          flex-direction: row;
  width: 100%;
  height: 64px;
  max-height: 64px;
  padding: 0 16px;
  margin: 0;
   }

.backgroundCover {
    transition: opacity 450ms;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
        z-index: 79;
    background-color: rgba(33,33,33,1.0);
        opacity: .48;

}


.centerMenu {
/*
    position: fixed;
    z-index: 900;
    top: 0;
    bottom: 0;
    left:0;
    right:0;
    height:651px;
*/
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 80;
    overflow: hidden;

}

.centerCenterMenu {
    opacity: 1;
    min-width: 240px;
    max-width: 80%;
    max-height: 80%;
    position: relative;
    overflow: auto;
    transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
    -webkit-transform: translate3d(0, 0, 0) scale(1);
    transform: translate3d(0, 0, 0) scale(1);
    box-shadow: 0px 8px 10px -5px rgba(0, 0, 0, 0.14),
        0px 16px 24px 2px rgba(0, 0, 0, 0.098),
        0px 6px 30px 5px rgba(0, 0, 0, 0.084);
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
}

.console-content {
    height: 100%;
    width: 100%;
    overflow: hidden;
}


/*
.headerToolBar {
    height:54px;
    background-color: #4CAF50;
    color: rgba(255,255,255,0.87);
}

.md-toolbar-tools {
    height:54px !important;
    min-height: 54px !important;
    max-height:54px !important;
}
*/

/*
md-toolbar {
    height:54px !important;
    min-height: 54px !important;
    max-height:54px !important;
}
*/


.mainButtonReverse {
    -webkit-transition: transform .4s;
    transition: transform .4s;
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
}

.mainButton {
    -webkit-transition: transform .4s;
    transition: transform .4s;
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

.frameStyle {
    min-width: 125px;
    text-align: center;
}

.lSideNav {

}
/* ... */

